Fix progress bar spacing on Astra

--- a/assets/blocks/quiz/quiz.editor.scss
+++ b/assets/blocks/quiz/quiz.editor.scss
@@ -61,6 +61,11 @@ $gray-400: #ccc;
 		}
 	}
 
+	&__progress-bar {
+		margin-top: $default-block-margin;
+		margin-bottom: $default-block-margin;
+	}
+
 	&__pre-publish-validation {
 		&__notice {
 			margin: 0;
